objects/UEH_KeyPrefix_Module_Handler__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Key_Prefix__c</fullName>
        <description>Duplicated from the Name field so we can enforce uniqueness</description>
        <inlineHelpText>The object key prefix that the thread id contained - copy this key prefix to the Name field as well</inlineHelpText>
        <label>Key Prefix</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Module_Handler_Class__c</fullName>
        <description>This field stores the value of Class name that can be used in email routing business logic</description>
        <inlineHelpText>Name of the Apex class that should handle inbound messages for this Key Prefix (do not include .cls)</inlineHelpText>
        <label>Module Handler Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Name__c</fullName>
        <description>This field stores Module name</description>
        <inlineHelpText>Friendly name of the module the key prefix is mapped to</inlineHelpText>
        <label>Module Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>UEH_KeyPrefix_Module_Handler</label>
</CustomObject>